# Pract-2-kurs2323

./: CMakeLists.txt  README.md  database.txt  fake_invoices.py
src/: main.cpp  queries.cpp  queries.h  seed_database.cpp  seed_database.h  utils.cpp  utils.h
src/DataModels/: Car.cpp  Car.h  Client.cpp  Client.h  Color.cpp  Color.h  Company.cpp  Company.h  Invoice.cpp  Invoice.h  Model.cpp  Model.h
